--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sanity/client": "^6.4.12",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.0",
     "gsap": "^3.12.2",
