--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@sanity/client": "^6.4.12",
+    "@sanity/image-url": "^1.0.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.0",
     "gsap": "^3.12.2",
