--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@sanity/client": "^6.4.12",
     "@sanity/image-url": "^1.0.2",
     "aos": "^2.3.4",
